added: crc32 udl

--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -112,6 +112,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="types.h" />
+    <ClInclude Include="udl.h" />
+    <ClInclude Include="udl_crc32.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
