--- a/mp/mp.vcxproj
+++ b/mp/mp.vcxproj
@@ -71,15 +71,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>$(SolutionDir);$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)build\bin\$(SolutionName)_$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)build\obj\$(SolutionName)_$(ProjectName)_$(Platform)_$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(SolutionDir);$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)build\bin\$(SolutionName)_$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)build\obj\$(SolutionName)_$(ProjectName)_$(Platform)_$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir);$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)build\bin\$(SolutionName)_$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)build\obj\$(SolutionName)_$(ProjectName)_$(Platform)_$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir);$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)build\bin\$(SolutionName)_$(Platform)_$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)build\obj\$(SolutionName)_$(ProjectName)_$(Platform)_$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
