--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClInclude Include="any.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="any_type_info.h">
+    <ClInclude Include="type_info.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
