--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClInclude Include="type_info.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="core.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
