--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -180,6 +180,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="any.h" />
+    <ClInclude Include="core.h" />
     <ClInclude Include="types.h" />
     <ClInclude Include="type_info.h" />
     <ClInclude Include="udl.h" />
