fixed: handle exception semtantics

--- a/Common.props
+++ b/Common.props
@@ -11,6 +11,7 @@
     <ClCompile>
       <ExceptionHandling>false</ExceptionHandling>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
+      <PreprocessorDefinitions>_HAS_EXCEPTIONS=0;CORE_NO_EXCEPTIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
