--- a/Common.props
+++ b/Common.props
@@ -11,7 +11,7 @@
     <ClCompile>
       <ExceptionHandling>false</ExceptionHandling>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
-      <PreprocessorDefinitions>_HAS_EXCEPTIONS=0;CORE_NO_EXCEPTIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_HAS_EXCEPTIONS=0;CORE_NO_EXCEPTIONS;CORE_NO_STD_TYPE_INFO;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
