--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -180,11 +180,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="any.h" />
+    <ClInclude Include="any_serializer_base.h" />
     <ClInclude Include="core.h" />
     <ClInclude Include="types.h" />
     <ClInclude Include="type_info.h" />
     <ClInclude Include="udl.h" />
     <ClInclude Include="udl_crc32.h" />
+    <ClInclude Include="utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
