--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClInclude Include="any_serializer_base.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="variant.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
